--- a/moviesearch/package.json
+++ b/moviesearch/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "next": "^9.1.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
